--- a/private_dot_config/ranger/rc.conf
+++ b/private_dot_config/ranger/rc.conf
@@ -63,7 +63,7 @@ set vcs_aware false
 # disabled, local (only show local info), enabled (show local and remote
 # information).
 set vcs_backend_git enabled
-set vcs_backend_hg disabled
+set vcs_backend_hg  disabled
 set vcs_backend_bzr disabled
 set vcs_backend_svn disabled
 
@@ -132,9 +132,9 @@ set colorscheme default
 
 # Preview files on the rightmost column?
 # And collapse (shrink) the last column if there is nothing to preview?
-set preview_files true
+set preview_files       true
 set preview_directories true
-set collapse_preview false
+set collapse_preview    false
 
 # Save the console history on exit?
 set save_console_history true
@@ -153,14 +153,14 @@ set draw_progress_bar_in_status_bar true
 set draw_borders separators
 
 # Display the directory name in tabs?
-set dirname_in_tabs false
+set dirname_in_tabs true
 
 # Enable the mouse support?
 set mouse_enabled false
 
 # Display the file size in the main column or status bar?
 set display_size_in_main_column true
-set display_size_in_status_bar true
+set display_size_in_status_bar  true
 
 # Display the free disk space in the status bar?
 set display_free_space_in_status_bar true
@@ -185,7 +185,7 @@ set hostname_in_titlebar true
 set tilde_in_titlebar true
 
 # How many directory-changes or console-commands should be kept in history?
-set max_history_size 20
+set max_history_size         20
 set max_console_history_size 50
 
 # Try to keep so much space between the top/bottom border when scrolling:
@@ -302,14 +302,14 @@ set freeze_files false
 # == Command Aliases in the Console
 # ===================================================================
 
-alias e     edit
-alias q     quit
-alias q!    quit!
-alias qa    quitall
-alias qa!   quitall!
-alias qall  quitall
-alias qall! quitall!
-alias setl  setlocal
+alias e          edit
+alias q          quit
+alias q!         quit!
+alias qa         quitall
+alias qa!        quitall!
+alias qall       quitall
+alias qall!      quitall!
+alias setl       setlocal
 
 alias filter     scout -prts
 alias find       scout -aets
@@ -324,35 +324,35 @@ alias travel     scout -aefklst
 # ===================================================================
 
 # Basic
-map     Q quitall
-map     q quit
-copymap q ZZ ZQ
+map     Q     quitall
+map     q     quit
+copymap q     ZZ          ZQ
 
-map R     reload_cwd
-map F     set freeze_files!
-map <C-r> reset
-map <C-l> redraw_window
-map <C-c> abort
-map <esc> change_mode normal
-map ~ set viewmode!
+map     R     reload_cwd
+map     F     set         freeze_files!
+map     <C-r> reset
+map     <C-l> redraw_window
+map     <C-c> abort
+map     <esc> change_mode normal
+map     ~     set         viewmode!
 
-map i display_file
-map ? help
-map W display_log
-map w taskview_open
-map S shell $SHELL
+map     i     display_file
+map     ?     help
+map     W     display_log
+map     w     taskview_open
+map     S     shell       $SHELL
 
-map :  console
-map ;  console
-map !  console shell%space
-map @  console -p6 shell  %%s
-map #  console shell -p%space
-map s  console shell%space
-map r  chain draw_possible_programs; console open_with%%space
-map f  console find%space
-map cd console cd%space
+map     :     console
+map     ;     console
+map     !     console     shell%space
+map     @     console     -p6                     shell   %%s
+map     #     console     shell                   -p%space
+map     s     console     shell%space
+map     r     chain       draw_possible_programs; console open_with%%space
+map     f     console     find%space
+map     cd    console     cd%space
 
-map <C-p> chain console; eval fm.ui.console.history_move(-1)
+map     <C-p> chain       console;                eval    fm.ui.console.history_move(-1)
 
 # Change the line mode
 map Mf linemode filename
@@ -393,7 +393,7 @@ map <END>      move to=-1
 map <PAGEDOWN> move down=1   pages=True
 map <PAGEUP>   move up=1     pages=True
 map <CR>       move right=1
-#map <DELETE>   console delete
+map <DELETE>   console delete
 map <INSERT>   console touch%space
 
 # VIM-like
@@ -406,10 +406,10 @@ copymap <END>      G
 copymap <PAGEDOWN> <C-F>
 copymap <PAGEUP>   <C-B>
 
-map J  move down=0.5  pages=True
-map K  move up=0.5    pages=True
-copymap J <C-D>
-copymap K <C-U>
+map     J          move down=0.5 pages=True
+map     K          move up=0.5   pages=True
+copymap J          <C-D>
+copymap K          <C-U>
 
 # Jumping around
 map H     history_go -1
@@ -420,23 +420,23 @@ map }     traverse
 map {     traverse_backwards
 map )     jump_non
 
-map gh cd ~
-map ge cd /etc
-map gu cd /usr
-map gd cd /dev
-map gl cd -r .
-map gL cd -r %f
-map go cd /opt
-map gv cd /var
-map gm cd /media
+map gh cd   ~
+map ge cd   /etc
+map gu cd   /usr
+map gd cd   /dev
+map gl cd   -r .
+map gL cd   -r %f
+map go cd   /opt
+map gv cd   /var
+map gm cd   /media
 map gi eval fm.cd('/run/media/' + os.getenv('USER'))
-map gM cd /mnt
-map gs cd /srv
-map gp cd /tmp
-map gr cd /
+map gM cd   /mnt
+map gs cd   /srv
+map gp cd   /tmp
+map gr cd   /
 map gR eval fm.cd(ranger.RANGERDIR)
-map g/ cd /
-map g? cd /usr/share/doc/ranger
+map g/ cd   /
+map g? cd   /usr/share/doc/ranger
 
 # External Programs
 map E  edit
@@ -465,20 +465,20 @@ map pL  paste_symlink relative=True
 map phl paste_hardlink
 map pht paste_hardlinked_subtree
 
-map dD console delete
+map dD  console       delete
 
-map dd cut
-map ud uncut
-map da cut mode=add
-map dr cut mode=remove
-map dt cut mode=toggle
+map dd  cut
+map ud  uncut
+map da  cut           mode=add
+map dr  cut           mode=remove
+map dt  cut           mode=toggle
 
-map yy copy
-map uy uncut
-map ya copy mode=add
-map yr copy mode=remove
-map yt copy mode=toggle
-map ?  taskview_open
+map yy  copy
+map uy  uncut
+map ya  copy          mode=add
+map yr  copy          mode=remove
+map yt  copy          mode=toggle
+map ?   taskview_open
 
 #   Temporary workarounds
 map dgg       eval fm.cut(dirarg=dict(to=0),    narg=quantifier)
@@ -502,25 +502,25 @@ map cm search_next order=mtime
 map ca search_next order=atime
 
 # Tabs
-map tn     tab_new
-map tc     tab_close
-map tz     tab_move 1
-map tr     tab_move -1
-map t1     tab_open 1
-map t2     tab_open 2
-map t3     tab_open 3
-map t4     tab_open 4
-map t5     tab_open 5
-map t6     tab_open 6
-map t7     tab_open 7
-map t8     tab_open 8
-map t9     tab_open 9
-map tsz    tab_shift 1
-map tsr    tab_shift -1
+map tn  tab_new
+map tc  tab_close
+map tz  tab_move  1
+map tr  tab_move  -1
+map t1  tab_open  1
+map t2  tab_open  2
+map t3  tab_open  3
+map t4  tab_open  4
+map t5  tab_open  5
+map t6  tab_open  6
+map t7  tab_open  7
+map t8  tab_open  8
+map t9  tab_open  9
+map tsz tab_shift 1
+map tsr tab_shift -1
 
 # Sorting
-map or set sort_reverse!
-map oz set sort=random
+map or set   sort_reverse!
+map oz set   sort=random
 map os chain set sort=size;      set sort_reverse=False
 map ob chain set sort=basename;  set sort_reverse=False
 map on chain set sort=natural;   set sort_reverse=False
