--- a/private_dot_config/private_kitty/private_kitty.conf
+++ b/private_dot_config/private_kitty/private_kitty.conf
@@ -1,8 +1,8 @@
 #                 font
-font_family       Fira Code
-bold_font         auto
-italic_font       auto
-bold_italic_font  auto
+font_family      Operator Mono Book
+bold_font        Operator Mono Medium
+italic_font      Operator Mono Book Italic
+bold_italic_font Operator Mono Medium Italic
 font_size         12
 disable_ligatures never
 
@@ -15,7 +15,7 @@ foreground                 #ffffff
 foreground_bold            #ffffff
 cursor                     #ffffff
 background_color           #000000
-background_opacity         0.5
+background_opacity         0.7
 
 # tabs
 tab_bar_edge       top
@@ -24,42 +24,42 @@ tab_title_template {index}: {title}
 
 
 # black
-color0 #282828
-color8 #484848
+color0 #080808
+color8 #080808
 
 
 #: red
-color1 #f43753
-color9 #f43753
+color1 #de1738
+color9 #de1738
 
 
 #: green
-color2  #c9d05c
-color10 #c9d05c
+color2  #c5b358
+color10 #c5b358
 
 
 #: yellow
-color3  #ffc24b
-color11 #ffc24b
+color3  #ffcc99
+color11 #ffcc99
 
 
 #: blue
-color4  #b3deef
-color12 #b3deef
+color4  #0094f5
+color12 #0094f5
 
 
 #: magenta
-color5  #d3b987
-color13 #d3b987
+color5  #f50086
+color13 #f50086
 
 
 #: cyan
-color6  #73cef4
-color14 #73cef4
+color6  #00c6f5
+color14 #00c6f5
 
 
 #: white
-color7  #eeeeee
-color15 #ffffff
+color7  #f5f5f5
+color15 #f5f5f5
 
 
